# TabularDataAnnotator-streamlit

./: .gitignore  BACKUP_app.py  CITATION.cff  LICENSE  README.md  Sandbox_KEYWORDMATCHER.ipynb  app_annotator.py  pyproject.toml
code/: query.py  query.sh  query.sparql
data/: openai_cache.json  vocabCombined-models_local--all-MiniLM-L6-v2-meta.npz
pages/: 01_📖_Input.py  02_✒️_Context.py  02_✒️_Description.py  03_🕵️_Keyword_Matcher.py  04_📐_Unit_of_measurement.py  05_⚙️_Methode.py  06_🔗_Linking_tables.py  07_💾_Export_metadata_file.py  99_QUDT_viewer.py
ui/: blocks.py
util/: __init__.py  metadata.py
