[project]
name = "dataannotator"
version = "0.1.0"
description = "Streamlit tool for annotation of datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "faiss-cpu>=1.12.0",
    "openai>=2.7.2",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
